--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <!-- logo bar -->
             <div id="logobar" class="uni-padding">
-                <img src="images/randomwork-logo.png" alt="randomwork">
+                <img src="images/randomwork-logo.png" alt="randomwork" width="250px" height 250px>
             </div>
 
             <!-- nav bar -->
